Fix headline word-break on smartphones

--- a/src/css/base/global.less
+++ b/src/css/base/global.less
@@ -66,6 +66,7 @@ section {
         .colorVar(border-color, --primaryTextColor, @primaryTextColor);
         padding-bottom: 0.25em;
         text-align: center;
+        word-break: break-word;
     }
 }
 
